// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInput Component AmountInput renders 1`] = `
<div>
  <input
    class="gds-amount-field"
    data-testid="name"
    inputmode="numeric"
    name="name"
    type="text"
    value=""
  />
</div>
`;

exports[`AmountInput Component AmountInput renders groupint style NONE 1`] = `
<div>
  <input
    class="gds-amount-field"
    inputmode="numeric"
    name="name"
    type="text"
    value=""
  />
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with no value, highlighted 1`] = `
<div>
  <div
    class="gds-amount-field amount-field-read-only field-highlighted field-input-size-5"
  >
    A 
    -
     B
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with value LAKH fornat 1`] = `
<div>
  <span
    class="gds-amount-field amount-field-read-only field-highlighted field-input-size-5"
    id="name"
    name="name"
  >
    A 1,23,45,67,890.12 B
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with value LAKH fornat without prefix and suffix 1`] = `
<div>
  <span
    class="gds-amount-field amount-field-read-only field-highlighted field-input-size-5"
    id="name"
    name="name"
  >
    1,23,45,67,890.12
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with value shotern 1`] = `
<div>
  <div
    class="gds-amount-field amount-field-read-only field-highlighted field-input-size-5"
  >
     A
    1.23 b
     B
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders triggers onChange 1`] = `
<div>
  <input
    class="gds-amount-field field-input-size-8"
    data-testid="name"
    inputmode="numeric"
    name="name"
    type="text"
    value="A 123,456,789 B"
  />
</div>
`;

exports[`AmountInput Component AmountInput renders triggers onChange with min and max 1`] = `
<div>
  <input
    class="gds-amount-field"
    data-testid="name"
    inputmode="numeric"
    name="name"
    type="text"
    value="12"
  />
</div>
`;

exports[`AmountInput Component AmountInput renders triggers onChange with min and max 2`] = `
<div>
  <input
    class="gds-amount-field"
    data-testid="name"
    inputmode="numeric"
    name="name"
    type="text"
    value="-12"
  />
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only 1`] = `
<div>
  <div
    class="gds-amount-field amount-field-read-only"
    data-testid="name"
  >
    
    -
    
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only prefix and suffix 1`] = `
<div>
  <div
    class="gds-amount-field amount-field-read-only"
    data-testid="name"
  >
    A 
    -
     B
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only prefix and suffix shorten 1`] = `
<div>
  <span
    class="gds-amount-field amount-field-read-only"
    data-testid="name"
    id="name"
    name="name"
  >
    A 10 B
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only prefix and suffix shorten 2`] = `
<div>
  <span
    class="gds-amount-field amount-field-read-only"
    data-testid="name"
    id="name"
    name="name"
  >
    A 10 B
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders with in read only shorten highlighted prefix and suffix shorten 1`] = `
<div>
  <div
    class="gds-amount-field amount-field-read-only field-highlighted"
    data-testid="name"
  >
     A
    1.23 b
     B
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders with input in readonly highlighted shorten 1`] = `
<div>
  <div
    class="gds-amount-field amount-field-read-only field-highlighted"
    data-testid="name"
  >
    1.23 b
  </div>
</div>
`;
